--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "superagent": "^3.8.2",
     "superagent-promise": "^1.1.0"
   },
